--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,10 +2,22 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Title</title>
 </head>
 <body>
-<h1>TEST</h1>
-<h2 th:text="${fail}"></h2>
+    <h1>OAuth2 Login</h1>
+    <h2 th:text="${fail}"></h2>
+
+    <div id="loginComponent">
+
+    </div>
+
+    <!-- React JS -->
+    <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <!-- Dev -->
+    <script type="text/babel" src="/js/login.js"></script>
 </body>
 </html>
