- SSR(thymeleaf) + React Render 테스트

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,8 +9,8 @@
     <h1>OAuth2 Login</h1>
     <h2 th:text="${fail}"></h2>
 
-    <div id="loginComponent">
-
+    <div class="login">
+        <div class="loginButton" th:each="oauthLogin: ${oauthLoginList}" th:attr="data-oauthcode=${oauthLogin}"></div>
     </div>
 
     <!-- React JS -->
